force-app/main/default/objects/SystemSettings__c/fields/AdminProfiles__c.field-meta.xml
<CustomField>
    <fullName>AdminProfiles__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>List of profiles of system administrators (for business rules)</description>
    <label>Administrator Profiles</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>