force-app/main/default/objects/SystemSettings__c/fields/AIModel__c.field-meta.xml
<CustomField>
    <fullName>AIModel__c</fullName>
    <description>Default AI model</description>
    <label>AI Model</label>
    <length>30</length>
    <type>Text</type>
</CustomField>