force-app/main/default/objects/SystemSettings__c/fields/CPDeletionTime__c.field-meta.xml
<CustomField>
    <fullName>CPDeletionTime__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Time in hours before the system deletes custom projects with no files attached (0=Disabled)</description>
    <inlineHelpText>Time in hours before the system deletes custom projects with no files attached (0=Disabled)</inlineHelpText>
    <label>CP Deletion Time (hours)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>