force-app/main/default/objects/SystemSettings__c/fields/CPNotificationsEnabled__c.field-meta.xml
<CustomField>
    <fullName>CPNotificationsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Custom Projects email notifications enabled</inlineHelpText>
    <label>CP Enable Notifications</label>
    <type>Checkbox</type>
</CustomField>