force-app/main/default/objects/SystemSettings__c/fields/DefaultUSAMethodOwner__c.field-meta.xml
<CustomField>
    <fullName>DefaultUSAMethodOwner__c</fullName>
    <description>Default owner for the USA assignation method</description>
    <label>Default USA Assign Owner</label>
    <length>25</length>
    <type>Text</type>
</CustomField>