force-app/main/default/objects/SystemSettings__c/fields/DevFeatures__c.field-meta.xml
<CustomField>
    <fullName>DevFeatures__c</fullName>
    <description>List of features under development</description>
    <inlineHelpText>List delimited with &quot;;&quot;</inlineHelpText>
    <label>DevFeatures</label>
    <length>100</length>
    <type>Text</type>
</CustomField>