force-app/main/default/objects/SystemSettings__c/fields/DummyProduct__c.field-meta.xml
<CustomField>
    <fullName>DummyProduct__c</fullName>
    <description>SAP code of the dummy products</description>
    <inlineHelpText>SAP code of the dummy products</inlineHelpText>
    <label>Dummy Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>