force-app/main/default/objects/SystemSettings__c/fields/GenericUsers__c.field-meta.xml
<CustomField>
    <fullName>GenericUsers__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Generic Users Id (Magento user, API user, etc.)</description>
    <label>GenericUsers</label>
    <length>250</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>