force-app/main/default/objects/SystemSettings__c/fields/MaterialBankPricebook__c.field-meta.xml
<CustomField>
    <fullName>MaterialBankPricebook__c</fullName>
    <inlineHelpText>Pricebook to use to convert material bank leads</inlineHelpText>
    <label>Material Bank Pricebook</label>
    <length>18</length>
    <type>Text</type>
</CustomField>