force-app/main/default/objects/SystemSettings__c/fields/SAPAPI__c.field-meta.xml
<CustomField>
    <fullName>SAPAPI__c</fullName>
    <description>URL del Api Manager (proxy) de SAP CPI</description>
    <label>SAP API</label>
    <type>Url</type>
</CustomField>