force-app/main/default/objects/SystemSettings__c/fields/SapConnectionDown__c.field-meta.xml
<CustomField>
    <fullName>SapConnectionDown__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, everything related to send info to sap is disabled.</description>
    <label>Sap Connection Down</label>
    <type>Checkbox</type>
</CustomField>