force-app/main/default/objects/SystemSettings__c/fields/SAPCPI__c.field-meta.xml
<CustomField>
    <fullName>SAPCPI__c</fullName>
    <description>URL de SAP CPI</description>
    <label>SAP CPI</label>
    <type>Url</type>
</CustomField>