force-app/main/default/objects/SystemSettings__c/fields/SAPCPIAPIKey__c.field-meta.xml
<CustomField>
    <fullName>SAPCPIAPIKey__c</fullName>
    <description>API key to access the salesforce API</description>
    <label>SAP CPI API Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>