force-app/main/default/objects/SystemSettings__c/fields/SAPCPIInstance__c.field-meta.xml
<CustomField>
    <fullName>SAPCPIInstance__c</fullName>
    <description>Name of this instance in SAP CPI</description>
    <label>SAP CPI Instance</label>
    <length>20</length>
    <type>Text</type>
</CustomField>