force-app/main/default/objects/SystemSettings__c/fields/SAPDispatcherEnabled__c.field-meta.xml
<CustomField>
    <fullName>SAPDispatcherEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables the SAP Dispatcher to send orders to SAP. Should TRUE unless there&apos;s a good reason</description>
    <label>Enable SAP Request Dispatcher</label>
    <type>Checkbox</type>
</CustomField>