force-app/main/default/objects/SystemSettings__c/fields/USAppointmentSubtype__c.field-meta.xml
<CustomField>
    <fullName>USAppointmentSubtype__c</fullName>
    <label>US Appointment Subtype</label>
    <length>30</length>
    <type>Text</type>
</CustomField>