force-app/main/default/objects/SystemSettings__c/fields/USClaimsManager__c.field-meta.xml
<CustomField>
    <fullName>USClaimsManager__c</fullName>
    <description>Email of then US claims manager</description>
    <inlineHelpText>Email of then US claims manager</inlineHelpText>
    <label>USClaimsManager</label>
    <type>Email</type>
</CustomField>