force-app/main/default/objects/SystemSettings__c/fields/USFacadeManagerMail__c.field-meta.xml
<CustomField>
    <fullName>USFacadeManagerMail__c</fullName>
    <description>E-Mail of the US facade manager. A copy of all new facade projects will be sent to this emial in CC</description>
    <label>US Facade Manager Mail</label>
    <type>Email</type>
</CustomField>