force-app/main/default/objects/SystemSettings__c/fields/USNotifyWebLeads__c.field-meta.xml
<CustomField>
    <fullName>USNotifyWebLeads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>US Notify Web Leads</label>
    <type>Checkbox</type>
</CustomField>